--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -49,104 +49,104 @@
 .createSpace(@property:padding) {
 
     // All
-    &[class*='atk-@{property}-all'] {
+    [class*='atk-@{property}-all'] {
         @{property}: @space;
     }
-    &[class*='atk-@{property}-all--xs'] {
+    [class*='atk-@{property}-all--xs'] {
         @{property}: @space-xs;
     }
-    &[class*='atk-@{property}-all--s'] {
+    [class*='atk-@{property}-all--s'] {
         @{property}: @space-s;
     }
-    &[class*='atk-@{property}-all--l'] {
+    [class*='atk-@{property}-all--l'] {
         @{property}: @space-l;
     }
-    &[class*='atk-@{property}-all--xl'] {
+    [class*='atk-@{property}-all--xl'] {
         @{property}: @space-xl;
     }
 
     // Bottom
-    &[class*='atk-@{property}-bottom'] {
+    [class*='atk-@{property}-bottom'] {
         @{property}-bottom: @space;
     }
-    &[class*='atk-@{property}-bottom--xs'] {
+    [class*='atk-@{property}-bottom--xs'] {
         @{property}-bottom: @space-xs;
     }
-    &[class*='atk-@{property}-bottom--s'] {
+    [class*='atk-@{property}-bottom--s'] {
         @{property}-bottom: @space-s;
     }
-    &[class*='atk-@{property}-bottom--l'] {
+    [class*='atk-@{property}-bottom--l'] {
         @{property}-bottom: @space-l;
     }
-    &[class*='atk-@{property}-bottom--xl'] {
+    [class*='atk-@{property}-bottom--xl'] {
         @{property}-bottom: @space-xl;
     }
 
     // Left
-    &[class*='atk-@{property}-left'] {
+    [class*='atk-@{property}-left'] {
         @{property}-left: @space;
     }
-    &[class*='atk-@{property}-left--xs'] {
+    [class*='atk-@{property}-left--xs'] {
         @{property}-left: @space-xs;
     }
-    &[class*='atk-@{property}-left--s'] {
+    [class*='atk-@{property}-left--s'] {
         @{property}-left: @space-s;
     }
-    &[class*='atk-@{property}-left--l'] {
+    [class*='atk-@{property}-left--l'] {
         @{property}-left: @space-l;
     }
-    &[class*='atk-@{property}-left--xl'] {
+    [class*='atk-@{property}-left--xl'] {
         @{property}-left: @space-xl;
     }
 
     // Right
-    &[class*='atk-@{property}-right'] {
+    [class*='atk-@{property}-right'] {
         @{property}-right: @space;
     }
-    &[class*='atk-@{property}-right--xs'] {
+    [class*='atk-@{property}-right--xs'] {
         @{property}-right: @space-xs;
     }
-    &[class*='atk-@{property}-right--s'] {
+    [class*='atk-@{property}-right--s'] {
         @{property}-right: @space-s;
     }
-    &[class*='atk-@{property}-right--l'] {
+    [class*='atk-@{property}-right--l'] {
         @{property}-right: @space-l;
     }
-    &[class*='atk-@{property}-right--xl'] {
+    [class*='atk-@{property}-right--xl'] {
         @{property}-right: @space-xl;
     }
 
     // Top
-    &[class*='atk-@{property}-top'] {
+    [class*='atk-@{property}-top'] {
         @{property}-top: @space;
     }
-    &[class*='atk-@{property}-top--xs'] {
+    [class*='atk-@{property}-top--xs'] {
         @{property}-top: @space-xs;
     }
-    &[class*='atk-@{property}-top--s'] {
+    [class*='atk-@{property}-top--s'] {
         @{property}-top: @space-s;
     }
-    &[class*='atk-@{property}-top--l'] {
+    [class*='atk-@{property}-top--l'] {
         @{property}-top: @space-l;
     }
-    &[class*='atk-@{property}-top--xl'] {
+    [class*='atk-@{property}-top--xl'] {
         @{property}-top: @space-xl;
     }
 
     // Reset
-    &[class*='atk-@{property}-all--none'] {
+    [class*='atk-@{property}-all--none'] {
         @{property}: 0 !important;
     }
-    &[class*='atk-@{property}-bottom--none'] {
+    [class*='atk-@{property}-bottom--none'] {
         @{property}-bottom: 0 !important;
     }
-    &[class*='atk-@{property}-left--none'] {
+    [class*='atk-@{property}-left--none'] {
         @{property}-left: 0 !important;
     }
-    &[class*='atk-@{property}-right--none'] {
+    [class*='atk-@{property}-right--none'] {
         @{property}-right: 0 !important;
     }
-    &[class*='atk-@{property}-top--none'] {
+    [class*='atk-@{property}-top--none'] {
         @{property}-top: 0 !important;
     }
 }
